--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -26,17 +26,42 @@
   }
   .submenu-item {
     position: relative;
-    .submenu-title {
-      display: flex;
-      align-items: center;
-    }
-    .arrow-icon {
-      transition: transform .25s ease-in-out;
-      margin-left: 3px;
+    --current: #212529;
+    .submenu-arrow{
+			// color: $current;
+      position: absolute;
+      right: 1px;
+      top: 52%;
+      transition: transform .3s cubic-bezier(.645,.045,.355,1);
+      width: 10px;
+      &::before,&::after {
+        background-color: var(--current);
+        border-radius: 2px;
+        content: "";
+        height: 1.5px;
+        position: absolute;
+        transition: background .3s cubic-bezier(.645,.045,.355,1),transform .3s cubic-bezier(.645,.045,.355,1),top .3s cubic-bezier(.645,.045,.355,1),color .3s cubic-bezier(.645,.045,.355,1);
+        width: 6px;
+      }
+      &::before {
+        transform: rotate(45deg) translateX(-2.5px);
+      }
+      &::after {
+        transform: rotate(-45deg) translateX(2.5px);
+      }
     }
     &:hover {
-      .arrow-icon {
-        transform: rotate(180deg);
+      --current: #0d6efd;
+    }
+    &.menu-open {
+      .submenu-arrow {
+        transform: translateY(-2px);
+        &::before {
+          transform: rotate(-45deg) translateX(-2.5px);
+        }
+        &::after {
+          transform: rotate(45deg) translateX(2.5px);
+        }
       }
     }
   }
@@ -44,7 +69,6 @@
     list-style:none;
     padding-left: 0;
     white-space: nowrap;
-    display: none;
     width: min($numbers: 100%);
     .menu-item {
       padding: $menu-item-padding-y $menu-item-padding-x;
@@ -54,9 +78,6 @@
       &.is-active, &:hover {
         color: $menu-item-active-color !important;
       }
-    }
-    &.menu-open {
-      display: block;
     }
   }
 }
@@ -71,6 +92,13 @@
     &.is-active, &:hover {
       border-bottom: 0px;
       border-left: $menu-item-active-border-width solid $menu-item-active-color;
+    }
+  }
+  .submenu-item {
+    .submenu-arrow {
+      top: 19px;
+      right: 15px;
+  
     }
   }
 }
