--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -27,8 +27,8 @@
   .submenu-item {
     position: relative;
     --current: #212529;
+    // 箭头图标
     .submenu-arrow{
-			// color: $current;
       position: absolute;
       right: 1px;
       top: 52%;
