add: hooks fix autoComplete

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,4 +17,7 @@
 @import "../components/Menu/style";
 
 // input
-@import "../components/Input/style"
+@import "../components/Input/style";
+
+// autoComplete
+@import "../components/AutoComplete/style";
