--- a/src/components/Form/_style.scss
+++ b/src/components/Form/_style.scss
@@ -50,5 +50,9 @@
       margin-bottom: -24px;
       line-height: 24px;
     }
+    .form-item-button {
+      display: flex;
+      
+    }
    }
 }
