--- a/src/components/Input/_style.scss
+++ b/src/components/Input/_style.scss
@@ -33,7 +33,6 @@
   background-clip: padding-box;
   border: $input-border-width solid $input-border-color;
 
-  // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
   border-radius: $input-border-radius;
 
   box-shadow: $input-box-shadow;
@@ -45,19 +44,27 @@
     border-color: $input-focus-border-color;
     outline: 0;
     box-shadow: $input-focus-box-shadow;
-    // Avoid using mixin so we can pass custom focus shadow properly
+    &.input-has-error {
+      box-shadow: $input-has-error-box-shadow;
+    }
+  }
+  &:hover {
+    color: $input-focus-color;
+    background-color: $input-focus-bg;
+    border-color: $input-focus-border-color;
   }
   &::placeholder {
     color: $input-placeholder-color;
-    // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
     opacity: 1;
   }
   &:disabled,
   &[readonly] {
     background-color: $input-disabled-bg;
     border-color: $input-disabled-border-color;
-    // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
     opacity: 1;
+  }
+  &.input-has-error {
+    border-color: $input-has-error-border-color;
   }
 }
 .cola-input-group-prepend,
@@ -65,8 +72,8 @@
   display: flex;
   align-items: center;
   padding: $input-padding-y $input-padding-x;
-  margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
-  font-size: $input-font-size; // Match inputs
+  margin-bottom: 0; 
+  font-size: $input-font-size; 
   font-weight: $font-weight-normal;
   line-height: $input-line-height;
   color: $input-group-addon-color;
