--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -262,10 +262,14 @@ $input-border-radius-sm:                $border-radius-sm !default;
 
 $input-focus-bg:                        $input-bg !default;
 $input-focus-border-color:              lighten($primary, 25%) !default;
-$input-focus-width:                     .2rem !default;
+$input-focus-width:                     .17rem !default;
 $input-focus-color:                     $input-color !default;
 $input-focus-shadow-color:              rgba($primary, .25) !default;
 $input-focus-box-shadow:                0 0 0 $input-focus-width $input-focus-shadow-color !default;
+$input-has-error-border-color:          $danger;
+$input-has-error-box-shadow:            0 0 0 $input-focus-width rgba($danger, .25) !default;
+
+
 
 $input-placeholder-color:               $gray-600 !default;
 $input-plaintext-color:                 $body-color !default;
