--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,4 +23,7 @@
 @import "../components/AutoComplete/style";
 
 // form
-@import "../components/Form/style"
+@import "../components/Form/style";
+
+// checkbox
+@import "../components/Checkbox/style";
