--- a/src/components/Checkbox/_style.scss
+++ b/src/components/Checkbox/_style.scss
@@ -29,6 +29,16 @@
       top: 0;
       width: 100%;
       z-index: 1;
+      &[disabled] {
+        color: $btn-link-disabled-color;
+        cursor: not-allowed;
+        opacity: $btn-disabled-opacity;
+        pointer-events: none;
+
+        > *{
+          pointer-events: none; // 不接受鼠标事件
+        }
+      }
     }
     .cola-checkbox-inner {
       background-color: #fff;
@@ -58,6 +68,7 @@
         transition: all .1s cubic-bezier(.71,-.46,.88,.6),opacity .1s;
         width: 5.71428571px;
       }
+      
     }
     &.cola-checkbox-cheacked {
       &::after {
@@ -87,8 +98,27 @@
         }
       }
     }
+    
   }
-  .cola-checkbox+span {
+  &:hover {
+    .cola-checkbox {
+      .cola-checkbox-inner {
+        border-color: #1890ff;
+      }
+    }
+  }
+  &.disabled {
+    color: $btn-link-disabled-color;
+    cursor: not-allowed;
+    .cola-checkbox {
+      .cola-checkbox-inner {
+        cursor: not-allowed;
+        background-color: #f5f5f5;
+        border-color: #d9d9d9!important
+      }
+    }
+  }
+  .cola-checkbox + span {
     padding-left: 8px;
     padding-right: 8px;
   }
