--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -166,9 +166,9 @@ $enable-pointer-cursor-for-buttons:           true !default;
 $border-width:                1px !default;
 $border-color:                $gray-300 !default;
 
-$border-radius:               .25rem !default;
-$border-radius-lg:            .3rem !default;
-$border-radius-sm:            .2rem !default;
+$border-radius:               2px !default;
+$border-radius-lg:            2px !default;
+$border-radius-sm:            2px !default;
 
 // 不同类型的 box shadow
 $box-shadow-sm:               0 .125rem .25rem rgba($black, .075) !default;
@@ -179,18 +179,18 @@ $box-shadow-inset:            inset 0 1px 2px rgba($black, .075) !default;
 // 按钮
 // 按钮基本属性
 $btn-font-weight:             400;
-$btn-padding-y:               .375rem !default;
+$btn-padding-y:               .3rem !default;
 $btn-padding-x:               .75rem !default;
 $btn-font-family:             $font-family-base !default;
 $btn-font-size:               $font-size-base !default;
 $btn-line-height:             $line-height-base !default;
 
 //不同大小按钮的 padding 和 font size
-$btn-padding-y-sm:            .25rem !default;
+$btn-padding-y-sm:            .22rem !default;
 $btn-padding-x-sm:            .5rem !default;
 $btn-font-size-sm:            $font-size-sm !default;
 
-$btn-padding-y-lg:            .5rem !default;
+$btn-padding-y-lg:            .45rem !default;
 $btn-padding-x-lg:            1rem !default;
 $btn-font-size-lg:            $font-size-lg !default;
 
