--- a/src/components/Input/_style.scss
+++ b/src/components/Input/_style.scss
@@ -59,7 +59,7 @@
   }
   &:disabled,
   &[readonly] {
-    background-color: $input-disabled-bg;
+    // background-color: $input-disabled-bg;
     border-color: $input-disabled-border-color;
     opacity: 1;
   }
