--- a/src/components/Input/_style.scss
+++ b/src/components/Input/_style.scss
@@ -38,7 +38,7 @@
   box-shadow: $input-box-shadow;
   transition: $input-transition;
 
-  &:focus {
+  &:focus, &.is-active {
     color: $input-focus-color;
     background-color: $input-focus-bg;
     border-color: $input-focus-border-color;
