--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -290,3 +290,6 @@ $progress-bg:                       $gray-200 !default;
 $progress-border-radius:            $border-radius !default;
 $progress-bar-color:                $white !default;
 $progress-bar-transition:           width .6s ease !default;
+
+// select
+$select-option-color:               #e6f7ff !default;
