--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -277,7 +277,7 @@ $input-plaintext-color:                 $body-color !default;
 $input-height-border:                   $input-border-width * 2 !default;
 
 
-$input-transition:                      border-color .3s ease-in-out, box-shadow .3s ease-in-out !default;
+$input-transition:                      color .2s ease-in-out,border-color .3s ease-in-out, box-shadow .3s ease-in-out !default;
 
 $input-group-addon-color:               $input-color !default;
 $input-group-addon-bg:                  $gray-200 !default;
