--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,4 +29,7 @@
 @import "../components/Checkbox/style";
 
 // select
-@import "../components/Select/style"
+@import "../components/Select/style";
+
+//Icon
+@import "../components/Icon/style";
