--- a/src/components/Select/_style.scss
+++ b/src/components/Select/_style.scss
@@ -16,8 +16,7 @@
   border: $menu-border-width solid $menu-border-color;
   box-shadow: $submenu-box-shadow;
   width: 100%;
-  transition: all 300ms;
-  .suggstions-loading-icon {
+  .select-loading-icon {
     display: flex;
     align-items: center;
     justify-content: center;
