--- a/src/components/Slider/_style.scss
+++ b/src/components/Slider/_style.scss
@@ -5,33 +5,36 @@
   padding: 4px 0;
   cursor: pointer;
   list-style: none;
+  .cola-slider-rail {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color:#e1e1e1;
+    border-radius: 2px;
+    transition: background-color .3s;
+  }
   .cola-slider-track {
     position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 20px;
-    z-index: 1;
+    height: 4px;
+    background-color: #91d5ff;
+    border-radius: 2px;
+    transition: background-color .3s;
+    
   }
-  .cola-slider-has {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    border-radius: 10px;
-    background: #999;
-    .cola-slider-ctrl {
+  .cola-slider-ctrl {
       position: absolute;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
+      width: 14px;
+      height: 14px;
       z-index: 2;
-      right: -30px;
-      top: -20px;
-      background: #999;
-      box-shadow: rgba(0, 0, 0, 0.3) 0 5px 10px 0;
+      right: -10px;
+      top: -5px;
+      background-color: #fff;
+      border: solid 2px #91d5ff;
+      border-radius: 50%;
+      box-shadow: 0;
+      cursor: pointer;
+      transition: border-color .3s,box-shadow .6s,transform .3s cubic-bezier(.18,.89,.32,1.28);
     }
-  }
 }
 
 
