--- a/src/components/Slider/_style.scss
+++ b/src/components/Slider/_style.scss
@@ -9,35 +9,57 @@
     position: absolute;
     width: 100%;
     height: 4px;
-    background-color:#e1e1e1;
+    background-color: #e1e1e1;
     border-radius: 2px;
-    transition: background-color .3s;
-  }
-  .cola-slider-track {
-    position: absolute;
-    height: 4px;
-    background-color: #91d5ff;
-    border-radius: 2px;
-    transition: background-color .3s;
-    
-  }
-  .cola-slider-ctrl {
+    transition: background-color 0.3s;
+    .cola-slider-track {
       position: absolute;
-      width: 14px;
-      height: 14px;
-      z-index: 2;
-      right: -10px;
-      top: -5px;
-      background-color: #fff;
-      border: solid 2px #91d5ff;
-      border-radius: 50%;
-      box-shadow: 0;
-      cursor: pointer;
-      transition: border-color .3s,box-shadow .6s,transform .3s cubic-bezier(.18,.89,.32,1.28);
+      height: 4px;
+      background-color: #91d5ff;
+      border-radius: 2px;
+      transition: background-color 0.3s;
+      .cola-slider-ctrl {
+        position: absolute;
+        width: 14px;
+        height: 14px;
+        z-index: 2;
+        right: -10px;
+        top: -5px;
+        background-color: #fff;
+        border: solid 2px #91d5ff;
+        border-radius: 50%;
+        box-shadow: 0;
+        cursor: pointer;
+        transition: border-color 0.3s, box-shadow 0.6s,
+          transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+        &.open {
+          border-color: #1890ff;
+          .cola-slider-ratio {
+            position: absolute;
+            left: 7px;
+            background: $gray-800;
+            font-size: 14px;
+            font-weight: normal;
+            color: white;
+            line-height: 12px;
+            padding: 6px 12px;
+            white-space: nowrap;
+            border-radius: 2px;
+            transform: translateX(-50%) translateY(-30px);
+          }
+        }
+      }
     }
+  }
+  &.active {
+    .cola-slider-rail {
+      background-color: #adb5bd;
+      .cola-slider-track {
+        background-color: #1890ff;
+        .cola-slider-ctrl {
+          border-color: #1890ff;
+        }
+      }
+    }
+  }
 }
-
-
-
-
-
